# marky

./: Cargo.toml  README.md
benches/: handler.rs
src/: config.rs  embedding.rs  handler.rs  hover.rs  lib.rs  llm.rs  logging.rs
src/embedding/: ollama.rs
src/handler/: registry.rs
src/hover/: point.rs  range.rs
src/llm/: ollama.rs
